--- a/Task 7.ipynb
+++ b/Task 7.ipynb
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17002108",
+   "id": "6261a4af",
    "metadata": {},
    "source": [
     "FORMULA-\n",
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9a65493",
+   "id": "5c6098ad",
    "metadata": {},
    "source": [
     "Formula- \n",
@@ -414,7 +414,7 @@
     "\n",
     "def my_mode(sample):\n",
     "    c = Counter(sample)\n",
-    "    return [k for k, v in c.items() if v == c.most_common(1)[0][1]]"
+    "    return [x for x, y in c.items() if y == c.most_common(1)[0][1]]"
    ]
   },
   {
@@ -463,10 +463,10 @@
    ],
    "source": [
     "#Caluclating mode with library function\n",
-    "x=stats.mode(data['Highest_Qualified_Member'])\n",
-    "y=stats.mode(data['Mthly_HH_Income'])\n",
-    "print(\"Mode of Highest_Qualified_Member :\",x)\n",
-    "print(\"Mode of Mthly_HH_Income :\",y)"
+    "v=stats.mode(data['Highest_Qualified_Member'])\n",
+    "k=stats.mode(data['Mthly_HH_Income'])\n",
+    "print(\"Mode of Highest_Qualified_Member :\",v)\n",
+    "print(\"Mode of Mthly_HH_Income :\",k)"
    ]
   },
   {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c80136",
+   "id": "f7434d19",
    "metadata": {},
    "source": [
     "Formula-\n",
@@ -623,7 +623,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f34ed32a",
+   "id": "1244baae",
    "metadata": {},
    "source": [
     "Formula- \n",
@@ -1030,7 +1030,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cdaa9169",
+   "id": "e0a8e0e2",
    "metadata": {},
    "source": [
     "\n",
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffaa088a",
+   "id": "385f0b09",
    "metadata": {},
    "source": [
     "PROBABILITY DENSITY FUNCTION-\n",
@@ -1166,7 +1166,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24f0809c",
+   "id": "47e088fc",
    "metadata": {},
    "source": [
     "FORMULA-\n",
